plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
}

group = 'com.lam.mall.admin'
version = '1.0-SNAPSHOT'
sourceCompatibility = '17'


dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    implementation project(":mall-common")
    implementation project(":mall-mbg")

    implementation "org.springframework.boot:spring-boot-starter-tomcat"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-data-redis"
    implementation "org.springframework.boot:spring-boot-starter-security"
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation "mysql:mysql-connector-java:$mysqlConnectorVersion"
    implementation "org.opengauss:opengauss-jdbc:$opengaussVersion"
    implementation "com.alicp.jetcache:jetcache-starter-redis-lettuce:$jetcacheVersion"
    implementation "cn.hutool:hutool-all:$hutoolVersion"
    implementation "com.baomidou:mybatis-plus-boot-starter:$mybatisPlusStarterVersion"

    implementation "io.springfox:springfox-boot-starter:$springfoxVersion"
    implementation 'io.swagger:swagger-models:1.6.7'
    implementation 'io.swagger:swagger-annotations:1.6.7'

    annotationProcessor 'org.springframework:spring-context-indexer'

}

tasks.named('test') {
    useJUnitPlatform()
}